@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix broken banish command: loop logic was weird (skipping one file?).
+ server/ban.c
+Nicolas Weeger 2007-03-25
+
 Fix Win32 compilation.
  common/player.c: don't declare variables in the middle of the code
  lib/collect.pl.in: use binmode for files
